--- a/app/views/user_mailer/test2.html.erb
+++ b/app/views/user_mailer/test2.html.erb
@@ -1,7 +1,127 @@
 <style type="text/css">
-   #bodyTable {height:100% !important; margin:0; padding:0; width:100% !important;}
-   #templateContainer { max-width: 700px; width: 100%; }
-   #templatePreheader{ padding: 0 30px; }
+  body{font-family: "Helvetica", Arial, sans-serif;}
+  #bodyTable {height:100% !important; margin:0; padding:0; width:100% !important;}
+  #templateContainer { max-width: 700px; width: 100%; }
+  #templatePreheader{ padding: 0 30px; }
+  .main-container{width:60%; margin: 0 auto; border: 1px solid #E0E0E0; -moz-box-shadow: 0 3px 5px 2px #E0E0E0; -webkit-box-shadow: 0 3px 5px 2px #E0E0E0; box-shadow: 0 3px 5px 2px #E0E0E0; background: #ffffff;}
+
+  @media only screen and (max-width: 480px) {
+
+    #templateContainer { max-width: 600px !important; width: 100% !important; }
+    #templatePreheader{ padding: 0px 30px !important; }
+
+    .main-container{
+      width: 100% !important;
+      border: 0 !important;
+    }
+
+    .desk-img{
+      width: 100% !important;
+    }
+
+    .academy-img-cell{
+      display: none !important;
+    }
+
+    .container, .content{
+      max-width: 100% !important;
+    }
+
+    .centered-cell{
+      text-align: left !important;
+    }
+
+    .calendar-cell{
+      display: none !important;
+    }
+
+    .class-info-cell{
+      padding: 0 !important;
+    }
+
+    .btn-holder{
+      text-align: center !important;
+    }
+
+    .teacher-info-table{
+      display: block !important;
+      padding: 15px 18px!important; 
+    }
+
+    .teacher-info-cell{
+      display: block!important;
+      text-align: center;
+      }
+
+    .teacher-info-cell p, #name-cell{
+      text-align: left !important;
+    }
+
+    .teacher-info-cell h4{
+      font-size: 16px !important;
+      font-weight: bold !important;
+      padding-top: 10px !important;
+    }
+
+    #teacher-pic{
+      display: inline-block !important;
+    }
+
+    #teacher-bio {
+      padding-left: 0 !important;
+    }
+
+    .footer-img-holder, .about-header-cell, .about-table-cell{
+      display: block !important;
+      text-align: center !important;
+    }
+
+    .about-company-table{
+      display: none !important;
+    }
+
+    .hidden {
+      overflow: auto !important; 
+      width: auto !important;  
+      height: auto !important;
+      max-height: inherit !important; 
+    }
+
+    .footer, .teacher-desktop {
+      display: none !important;
+    }
+
+    td[class=headercell] img {
+      height:auto !important;
+      width:100% !important;
+    }
+
+    .none {
+      display: none !important;
+    }
+
+    .unsubscribe-info{
+      padding:0 5px!important;
+    }
+
+    .mobile {
+      display: block !important;
+    }
+    #green-btn {
+      background-color: #60B86A;
+      -webkit-box-shadow: 0 5px 0px 0px #44884D !important;
+      -moz-box-shadow: 0 5px 0px 0px #44884D !important;
+      box-shadow: 0 5px 0px 0px #44884D !important;
+      border-width: medium medium 0!important;
+    }
+    #blue_btn {
+      background-color: #407BCF !important;
+      -webkit-box-shadow: 0 5px 0px 0px #2E5997 !important;
+      -moz-box-shadow: 0 5px 0px 0px #2E5997 !important;
+      box-shadow: 0 5px 0px 0px #2E5997 !important; 
+      border-width: medium medium 0!important;
+    }
+  }
 </style>
 <table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
   <tr>
@@ -13,9 +133,9 @@
               <tr>
                 <td class="header container">
                   <div class="content">
-                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding: 15px 0;">
                       <tr>
-                        <td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
+                        <td><%= image_tag("logo_header_2x.png", class: "header-logo", width:"100px") %></td>
                       </tr>
                     </table>
                   </div>
@@ -26,33 +146,31 @@
         </tr>
         <tr>
           <td align="center" valign="top" id="bodyCell" class="container" bgcolor="#FFFFFF">
-            <div class="content">
-              <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="thank-you-table">
-                <tr class="thank-you-table-row">
+            <div class="content" style="padding: 15px 0;">
+              <table style="padding:0 215px;" border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="forgot-pass-table">
+                <tr class="forgot-pass-table-row">
                   <td class="centered-cell">
-                    <h3>Thank You!</h3>
-                    <div id="name-cell">
+                    <h3>Forgot your Password?</h3>
+                    <div style="margin-bottom: 20px;" id="name-cell">
                       Hi{Name}
                     </div>
-                    <div>
-                      Thank you! We've received your support request and</br>
-                      will get back to you within 48 hours.
+                    <div style="margin-bottom: 20px;">
+                      Forgot your password? Just click the button below to reset it and get back to optimizing your life! :)
                     </div>
-                    <div >
-                      Thank you!</br>
-                      - The en*theos Team
-                    </div>
+                    <div style="margin-bottom:20px;"><a class="btn" id="green-btn" style="background: none repeat scroll 0 0 #60B86A; border-color: -moz-use-text-color -moz-use-text-color #44884D;  border-image: none;border-radius: 2px 2px 2px 2px; border-style: none none solid; border-width: medium medium 4px; color: #FFFFFF; display: inline-block;font-size: 18px;font-weight: normal;line-height: normal;margin-bottom: 10px;padding: 12px 35px 10px;text-decoration: none;  ">Click here to reset it!</a></div>
                   </td>
                 </tr>
               </table>
             </div>
-          </td>
+            <div class="content" style="padding: 15px 0;">
+             
+            </div>
         </tr>
         <tr>
           <td align="center" valign="top" id="bodyCell">
             <table class="desk-table" border="0" cellpadding="0" cellspacing="0" width="100%" id="">
               <tr>
-                <td><%= image_tag("desk.png",class: "desk-img") %></td>
+                <td class="headercell"><%= image_tag("desk.png",class: "desk-img") %></td>
               </tr>
             </table>
           </td>
@@ -60,7 +178,7 @@
         <tr>
           <td height="25"></td>
         </tr>
-        <tr>
+        <tr class="footer" style="display: block;">
           <td align="center">
             <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
               <tr>
@@ -68,12 +186,12 @@
                   <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
                     <tr>
                       <td width="33%" valign="top">
-                        <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></a>
+                        <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo", width: "160px") %></a>
                         <p style="margin:15px 0;padding:0px;">
                           Our purpose is to help you optimize your life so we can change the world together.
                         </p>
                         <h5 style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                            Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                            Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
                         </h5>
                         <table>
                           <tr>
@@ -92,18 +210,18 @@
                       </td>
                       <td width="33%" align="center" style="text-align:center;" valign="top">
                         <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                          Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                          Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
                         </h5>
                         <p style="margin:5px 0 20px 0;padding:0px;">
-                          <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></a>
+                          <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img" , height:"30px", width:"35px") %></a>
                         </p> 
                          <p style="margin:0px 0 20px 0;padding:0px;">
-                          <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></a>
+                          <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img", height:"35px", width:"20px")%></a>
                         </p>    
                       </td>
                       <td width="33%" valign="top">
                         <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                            More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                            More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
                         </h5> 
                         <table border="0" width="100%">
                           <tr>
@@ -160,6 +278,139 @@
             </table>  
           </td>
         </tr>
+        <tr class="mobile-footer">
+          <td align="center">
+            <div style="overflow: hidden; width: 0; height: 0; max-height: 0;" class="hidden">
+              <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
+                <tr>
+                  <td>
+                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
+                      <tr align="center">
+                        <td width="33%" valign="top">
+                          <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo" , width: "160px") %></a>
+                          <p style="margin:15px 0;padding:0px;">
+                            Our purpose is to help you optimize your life so we can change the world together.
+                          </p>
+                          <h5 class="none" style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                              Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                          </h5>
+                          <table class="none">
+                            <tr>
+                              <td width="90"><a href="#" style="color:#8c8c8c;text-decoration:none;">About</a></td>
+                              <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Affiliate Program</a></td>
+                            </tr>
+                            <tr>
+                              <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Contact Us</a></td>
+                              <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Privacy Policy</a></td>
+                            </tr>
+                            <tr>
+                              <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Support</a></td>
+                              <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Terms & Conditions</a></td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
+                      <tr class="none" align="center">
+                        <td width="33%" align="center" style="text-align:center;" valign="top">
+                          <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                            Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
+                          </h5>
+                          <p style="margin:5px 0 20px 0;padding:0px;">
+                            <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></a>
+                          </p> 
+                           <p style="margin:0px 0 20px 0;padding:0px;">
+                            <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></a>
+                          </p>    
+                        </td>
+                      </tr>
+                      <tr class="mobile" align="center">
+                        <td width="100%" colspan="3" align="center">
+                          <table width="100%">
+                            <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949; width: 100%; text-align: center;">
+                              Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                            </h5>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr class="mobile" align="center">
+                        <td>
+                          <table width="100%">
+                            <tr>
+                              <td>
+                                <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img" ,height:"30px", width:"35px")%></a> 
+                              </td>
+                              <td>
+                                <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img", height:"35px", width:"20px")%></a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
+                      <tr align="center">
+                        <td width="33%" valign="top">
+                          <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                              More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                          </h5> 
+                          <table border="0" width="100%">
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Virtual Conferences</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">PhilosophersNotes</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Optimal Living 101</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Rock Your Goddess Life</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Blissitations</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Quotes</a>
+                              </td>
+                            </tr>
+                            <tr align="center">
+                              <td>
+                                <a href="#" style="color:#8c8c8c;text-decoration:none;">Big Ideas</a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>  
+            </div>
+          </td>
+        </tr>
         <tr>
           <td height="45"></td>
         </tr>
@@ -182,19 +433,16 @@
             <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templatePreheader">
               <tr>
                 <td style="font-size:12px; text-align:center;">
-                  <p style="margin:0px 0 20px 0;padding:0px 50px; line-height: 20px;">
+                  <p class="unsubscribe-info" style="margin:0px 0 20px 0;padding:0px 50px; line-height: 20px;">
                     You’re receiving this email because you signed up for the {<a href="#" style="color:#407bcf;text-decoration;">insert reason</a>}.If this email looks weird, <a href="#" style="color:#407bcf;text-decoration;">view it in your browser</a>. If you don’t want to receive this newsletter anymore,you can <a href="#" style="color:#407bcf;text-decoration;">unsubscribe</a>. (If you like it, share with a friend! :)
                   </p>
                   <p style="margin:0;padding:36px 0px;">
-                    @copy; 2009-2013 en*theos Enterprises, LLC | P.O. Box 33582 San Diego, CA 92163 
+                    &copy; 2009-2013 en*theos Enterprises, LLC | P.O. Box 33582 San Diego, CA 92163 
                   </p> 
                 </td>
               </tr>
             </table>
           </td>
-        </tr>
-        <tr>
-          <%=link_to "send mail", welcome_index_path, method: "post" %>
         </tr>
       </table>
     </td>
