--- a/app/views/welcome/demo.html.erb
+++ b/app/views/welcome/demo.html.erb
@@ -112,17 +112,19 @@
     .mobile {
       display: block !important;
     }
-    .green-btn {
+    #green-btn {
       background-color: #60B86A;
       -webkit-box-shadow: 0 5px 0px 0px #44884D !important;
       -moz-box-shadow: 0 5px 0px 0px #44884D !important;
       box-shadow: 0 5px 0px 0px #44884D !important;
+      border-width: medium medium 0!important;
     }
-    .blue_btn {
+    #blue_btn {
       background-color: #407BCF !important;
       -webkit-box-shadow: 0 5px 0px 0px #2E5997 !important;
       -moz-box-shadow: 0 5px 0px 0px #2E5997 !important;
       box-shadow: 0 5px 0px 0px #2E5997 !important; 
+      border-width: medium medium 0!important;
     }
   }
 </style>
@@ -138,7 +140,7 @@
                   <div class="content">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding: 15px 0;">
                       <tr>
-                        <td><%= image_tag("logo_header_2x.png", class: "header-logo", width:"100px") %></td>
+                        <td><%= image_tag("logo_header_2x.png", class: "header-logo", width:"100px",alt:"header") %></td>
                       </tr>
                     </table>
                   </div>
@@ -221,7 +223,7 @@
                       Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.
                     </p>
                   </div>
-                  <a href="#" style="font-size: ; font-family: ; color:; text-decoration: none;">View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %></a>
+                  <a href="#" style="color:#60B96B;font-size: ; font-family: ; color:; text-decoration: none;">View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %></a>
                 </td>
               </tr>
             </table>
@@ -242,7 +244,7 @@
                         Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.
                       </p>
                     </div>
-                    <a href="#" style="font-size: ; font-family: ; color:; text-decoration: none;">View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %></a>
+                    <a href="#" style="color:#60B96B;font-size: ; font-family: ; color:; text-decoration: none;">View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %></a>
                   </td>
                 </tr>
               </table>
