--- a/app/views/user_mailer/test3.html.erb
+++ b/app/views/user_mailer/test3.html.erb
@@ -1,12 +1,11 @@
 <style type="text/css">
-  body{font-family: "Helvetica", Arial, sans-serif;}
+  body{font-family: "Helvetica", Arial, sans-serif !important;}
   #bodyTable {height:100% !important; margin:0; padding:0; width:100% !important;}
   #templateContainer { max-width: 700px; width: 100%; }
-  #templatePreheader{ padding: 0 30px; }
-  .main-container{width:60%; margin: 0 auto; border: 1px solid #E0E0E0; -moz-box-shadow: 0 3px 5px 2px #E0E0E0; -webkit-box-shadow: 0 3px 5px 2px #E0E0E0; box-shadow: 0 3px 5px 2px #E0E0E0; background: #ffffff;}
+  #templatePreheader{ padding: 0 30px;}
+  .main-container{margin: 0 auto; border: 1px solid #E0E0E0; -moz-box-shadow: 0 3px 5px 2px #E0E0E0; -webkit-box-shadow: 0 3px 5px 2px #E0E0E0; box-shadow: 0 3px 5px 2px #E0E0E0; background: #ffffff;}
 
   @media only screen and (max-width: 480px) {
-
     #templateContainer { max-width: 600px !important; width: 100% !important; }
     #templatePreheader{ padding: 0px 30px !important; }
 
@@ -123,19 +122,19 @@
     }
   }
 </style>
-<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
+<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="font-family: 'Helvetica Neue', arial, sans-serif; color:#4a4a4a; font-size:14px;">
   <tr>
     <td align="center" valign="top" id="bodyCell">
-      <table border="0" cellpadding="0" cellspacing="0" width="100%" class="main-container" id="templateContainer">
+      <table cellpadding="0" cellspacing="0" width="100%" class="main-container" id="templateContainer" style="border: 1px solid #E0E0E0;">
         <tr>
           <td align="center" valign="top" id="bodyCell">
             <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" bgcolor="#F5F5F5" >
               <tr>
                 <td class="header container">
                   <div class="content">
-                    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding: 15px 0;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding: 15px 30px;">
                       <tr>
-                        <td><%= image_tag("logo_header_2x.png", class: "header-logo", width:"100px") %></td>
+                        <td><%= image_tag("academy/images/entheos_logo_footer_2x.png", class: "header-logo", width:"100px") %></td>
                       </tr>
                     </table>
                   </div>
@@ -147,18 +146,18 @@
         <tr>
           <td align="center" valign="top" id="bodyCell" class="container" bgcolor="#FFFFFF">
             <div class="content" style="padding: 15px 0;">
-              <table style="padding: 0 172px" border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="thank-you-table">
-                <tr class="thank-you-table-row">
-                  <td class="centered-cell">
-                    <h3 style="text-align:center;">Thank You!</h3>
-                    <div style="margin-bottom: 20px;" id="name-cell">
+              <table style="" border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="forgot-pass-table">
+                <tr class="forgot-pass-table-row">
+                  <td class="centered-cell" align="center" style="padding: 10px 0 0;">
+                    <h3 style="font-size:30px; font-weight:bold;">Thank You!</h3>
+                    <div id="name-cell" style="padding:20px 160px; text-align: left; font-size: 14px; font-weight: light;">
                       Hi{Name}
                     </div>
-                    <div>
-                      Thank you! We've received your support request and</br>
+                    <div style="margin-bottom: 20px; padding:0px 160px; text-align: left; font-size: 14px; line-height: 20px; font-weight: light;">
+                      Thank you! We've received your support request and
                       will get back to you within 48 hours.
                     </div>
-                    <div >
+                    <div style="margin-bottom:20px; padding:0px 160px; text-align: left;">
                       Thank you!</br>
                       - The en*theos Team
                     </div>
@@ -167,14 +166,14 @@
               </table>
             </div>
             <div class="content" style="padding: 15px 0;">
-             
             </div>
+          </td>
         </tr>
         <tr>
           <td align="center" valign="top" id="bodyCell">
             <table class="desk-table" border="0" cellpadding="0" cellspacing="0" width="100%" id="">
               <tr>
-                <td class="headercell"><%= image_tag("desk.png",class: "desk-img") %></td>
+                <td class="headercell"><%= image_tag("academy/images/desk_books_2x.png",class: "desk-img", width:"700px") %></td>
               </tr>
             </table>
           </td>
@@ -184,93 +183,93 @@
         </tr>
         <tr class="footer" style="display: block;">
           <td align="center">
-            <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
+            <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer"  style="padding-right: 30px; padding-left: 30px;">
               <tr>
                 <td>
                   <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
                     <tr>
                       <td width="33%" valign="top">
-                        <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo", width: "160px") %></a>
+                        <a href="#" class="footer-img-holder"><%= image_tag("academy/images/entheos_logo_footer_2x.png", class: "footer-logo", width: "160px") %></a>
                         <p style="margin:15px 0;padding:0px;">
                           Our purpose is to help you optimize your life so we can change the world together.
                         </p>
                         <h5 style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                            Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
+                            Company <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;' , :alt=>'arrow icon') %>
                         </h5>
                         <table>
                           <tr>
-                            <td width="90"><a href="#" style="color:#8c8c8c;text-decoration:none;">About</a></td>
-                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Affiliate Program</a></td>
+                            <td width="88"><a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px;">About</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;  font-size: 13px;">Affiliate Program</a></td>
                           </tr>
                           <tr>
-                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Contact Us</a></td>
-                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Privacy Policy</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px;">Contact Us</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px;">Privacy Policy</a></td>
                           </tr>
                           <tr>
-                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Support</a></td>
-                            <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Terms & Conditions</a></td>
+                            <td><a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px;">Support</a></td>
+                            <td colspan="2"><a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px;">Terms & Conditions</a></td>
                           </tr>
                         </table>
                       </td>
                       <td width="33%" align="center" style="text-align:center;" valign="top">
                         <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                          Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
+                          Share the Wisdom <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;', :alt=>'arrow icon') %>
                         </h5>
                         <p style="margin:5px 0 20px 0;padding:0px;">
-                          <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img" , height:"30px", width:"35px") %></a>
+                          <a href="#"><%= image_tag("academy/images/twittericon.jpg", class: "twitter-img") %></a>
                         </p> 
                          <p style="margin:0px 0 20px 0;padding:0px;">
-                          <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img", height:"35px", width:"20px")%></a>
+                          <a href="#"><%= image_tag("academy/images/fb-icon.jpg", class: "fb-img")%></a>
                         </p>    
                       </td>
                       <td width="33%" valign="top">
                         <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                            More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
+                            More Goodness <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;' , :alt=>'arrow icon') %>
                         </h5> 
                         <table border="0" width="100%">
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px; font-weight: light;">The Academy for Optimal Living</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Virtual Conferences</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px; font-weight: light;">Virtual Conferences</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">PhilosophersNotes</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px; font-weight: light;">PhilosophersNotes</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Optimal Living 101</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px; font-weight: light;">Optimal Living 101</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none; font-size: 13px; font-weight: light;">The Academy for Optimal Living</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Rock Your Goddess Life</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;font-size: 13px; font-weight: light;">Rock Your Goddess Life</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Blissitations</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;font-size: 13px; font-weight: light;">Blissitations</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Quotes</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;font-size: 13px; font-weight: light;">Quotes</a>
                             </td>
                           </tr>
                           <tr>
                             <td>
-                              <a href="#" style="color:#8c8c8c;text-decoration:none;">Big Ideas</a>
+                              <a href="#" style="color:#8c8c8c;text-decoration:none;font-size: 13px; font-weight: light;">Big Ideas</a>
                             </td>
                           </tr>
                         </table>
@@ -285,18 +284,18 @@
         <tr class="mobile-footer">
           <td align="center">
             <div style="overflow: hidden; width: 0; height: 0; max-height: 0;" class="hidden">
-              <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer">
+              <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center" id="templateContainer"  style="padding-right: 30px; padding-left: 30px;">
                 <tr>
                   <td>
                     <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;" id="templatePreheader">
                       <tr align="center">
                         <td width="33%" valign="top">
-                          <a href="#" class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo" , width: "160px") %></a>
+                          <a href="#" class="footer-img-holder"><%= image_tag("academy/images/entheos_logo_footer_2x.png", class: "footer-logo" , width: "160px") %></a>
                           <p style="margin:15px 0;padding:0px;">
                             Our purpose is to help you optimize your life so we can change the world together.
                           </p>
                           <h5 class="none" style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                              Company <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                              Company <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
                           </h5>
                           <table class="none">
                             <tr>
@@ -322,10 +321,10 @@
                             Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow", width: "12px", :style=>'vertical-align: -3px;') %>
                           </h5>
                           <p style="margin:5px 0 20px 0;padding:0px;">
-                            <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></a>
+                            <a href="#"><%= image_tag("academy/images/twittericon.jpg", class: "twitter-img") %></a>
                           </p> 
                            <p style="margin:0px 0 20px 0;padding:0px;">
-                            <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></a>
+                            <a href="#"><%= image_tag("academy/images/fb-icon.jpg", class: "fb-img")%></a>
                           </p>    
                         </td>
                       </tr>
@@ -333,7 +332,7 @@
                         <td width="100%" colspan="3" align="center">
                           <table width="100%">
                             <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949; width: 100%; text-align: center;">
-                              Share the Wisdom <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                              Share the Wisdom <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
                             </h5>
                           </table>
                         </td>
@@ -343,10 +342,10 @@
                           <table width="100%">
                             <tr>
                               <td>
-                                <a href="#"><%= image_tag("twitter_icon_2x.png", class: "twitter-img" ,height:"30px", width:"35px")%></a> 
+                                <a href="#"><%= image_tag("academy/images/twittericon.jpg", class: "twitter-img" ,height:"30px", width:"35px")%></a> 
                               </td>
                               <td>
-                                <a href="#"><%= image_tag("facebook_icon_2x.png", class: "fb-img", height:"35px", width:"20px")%></a>
+                                <a href="#"><%= image_tag("academy/images/fb-icon.jpg", class: "fb-img", height:"35px", width:"20px")%></a>
                               </td>
                             </tr>
                           </table>
@@ -357,7 +356,7 @@
                       <tr align="center">
                         <td width="33%" valign="top">
                           <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
-                              More Goodness <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
+                              More Goodness <%=image_tag("academy/images/f-right-arrow.jpg",:class=>"arrow" , width: "12px", :style=>'vertical-align: -3px;') %>
                           </h5> 
                           <table border="0" width="100%">
                             <tr align="center">
